--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,12 @@
       "store/*":[
         "src/store/*"
       ],
+      "query/*":[
+        "src/query/*"
+      ],
+      "types/*":[
+        "src/types/*"
+      ],
       "~/*": ["./public/*"]
     },
     "incremental": true
